<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_alphabetically"
        android:title="@string/sort_alphabetically"
        android:showAsAction="never" />
    <item
        android:id="@+id/sort_by_steps_ascending"
        android:title="@string/sort_by_steps_ascending"
        android:showAsAction="never" />
    <item
        android:id="@+id/sort_by_steps_descending"
        android:title="@string/sort_by_steps_descending"
        android:showAsAction="never" />
    <item
        android:id="@+id/achievements"
        android:title="@string/achievements"
        android:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:visible="false"
        android:title="@string/sign_out"
        android:showAsAction="never" />
</menu>