<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    style="@style/Match"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:background="@color/lego_yellow"
    android:fillViewport="true">

    <LinearLayout
        style="@style/MatchWidth"
        android:id="@+id/parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <oak.widget.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_c"
            android:textSize="@dimen/splash_font_size"
            oak:font="@string/default_font_thin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yellow_two_four_small"
            android:contentDescription="@string/content_description" />

        <oak.widget.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/builder_c"
            android:textSize="@dimen/splash_font_size"
            oak:font="@string/default_font_thin" />

        <ProgressBar
            style="@style/Widget.Sherlock.Light.ProgressBar"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <oak.widget.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloading_instructions"
            android:textSize="@dimen/default_text_size"
            oak:font="@string/default_font_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>