<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:layout_width="match_parent"
    android:layout_height="108dp"
    android:minHeight="108dp"
    android:maxHeight="108dp"
    android:background="@drawable/card_selector">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:minHeight="100dp"
        android:maxHeight="100dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:contentDescription="@string/content_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:orientation="vertical"
        android:background="@color/transparent_20_white">

        <oak.widget.TextViewWithFont
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="24sp"
            oak:font="@string/default_font_thin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <oak.widget.TextViewWithFont
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                oak:font="@string/default_font_thin" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <oak.widget.TextViewWithFont
                android:id="@+id/steps_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                oak:font="@string/default_font_bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:visibility="gone"
        android:src="@drawable/ic_checkmark" />
</RelativeLayout>